<resources>
    <string name="app_name">Scripto</string>
    <string name="userEmailHint">Email</string>
    <string name="userPasswordHint">Пароль</string>
    <string name="registerButtonText">Регистрация</string>
    <string name="toLogin">Войти в аккаунт</string>
    <string name="login">Вход</string>
    <string name="orSlash">или</string>
    <string name="loginGoogle">Войти через Google</string>
    <string name="toRegister">Создать аккаунт</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="forgotPasswordHeader">Восстановление пароля</string>
    <string name="forgotPasswordText">Введите email. Если аккаунт существует, мы отправим код подтверждения.</string>
    <string name="sixDigitCodeHint">Шестизначный код</string>
    <string name="cancelText">Отмена</string>
    <string name="newPasswordHint">Новый пароль</string>
    <string name="repeatPasswordHint">Повторите пароль</string>
    <string name="saveText">Сохранить</string>
    <string name="sendCodeText">Отправить код</string>
    <string name="otpActivationHeader">Введите код</string>
    <string name="confirmText">Подтвердить</string>
    <string name="sendCodeAgain">Отправить снова</string>
    <string name="RegConfirmHeader">Подтвердите почту</string>
    <string name="mailicon">MailIcon</string>
    <string name="readyText">Почти готово!</string>
    <string name="VerifyDecription">Мы отправили ссылку для подтверждения на ваш email. Пожалуйста, проверьте почту, чтобы завершить регистрацию.</string>
    <string name="deauth">Выйти из аккаунта</string>
    <string name="Scan">Сканировать конспект</string>
    <string name="CamIco">Иконка камеры</string>
    <string name="scripto">Scripto</string>
    <string name="Voice">Озвучить</string>
    <string name="Delete">Удалить</string>
    <string name="date">17.05.2026</string>
    <string name="Scanname">Название скана</string>
    <string name="Main">Главная</string>
    <string name="Archive">Архив</string>
    <string name="tvoypo">Твой почерк понятен всем</string>
    <string name="todo">TODO</string>
    <string name="stepbackstr">❮ назад</string>
    <string name="forgpass">Забыли пароль?↗</string>
    <string name="todo1">TODO</string>
</resources>