<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#ffffff">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/resetpassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/forgotPasswordHeader"
        android:textColor="#1F1F1F"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck"/>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/forgotPasswordText"
        android:textSize="12sp"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/fr_glass"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:cursorVisible="true"
        android:layout_gravity="center"
        android:textCursorDrawable="@drawable/cursor_black"
        android:hint="@string/userEmailHint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
       />
    <Button
        android:id="@+id/sendOtpBtn"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/sendCodeText"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:cornerRadius="12dp"
        tools:ignore="VisualLintButtonSize"/>
    <TextView
        android:id="@+id/cancelForgot"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:text="@string/stepbackstr"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="-600dp"
        android:layout_gravity="start"/>
</LinearLayout>