<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="316dp"
        android:layout_height="213dp"
        android:layout_marginTop="-100dp"
        app:srcCompat="@drawable/newpassword" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:autofillHints="password"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_black"
        android:background="@drawable/fr_glass"
        android:paddingHorizontal="12dp"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:autofillHints="password"
        android:hint="@string/repeatPasswordHint"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_black"
        android:background="@drawable/fr_glass"
        android:paddingHorizontal="12dp"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/saveText"
        app:cornerRadius="12dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/cancelReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="-500dp"
        android:contentDescription="@string/todo"
        android:text="@string/stepbackstr"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>