<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".screens.RegisterActivity">

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="#1F1F1F"
        android:textSize="64sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="33dp"
        android:text="@string/tvoypo"
        android:textColor="#1F1F1F"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />
    <!-- Email -->
    <EditText
        android:id="@+id/userEmailReg"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/fr_glass"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:cursorVisible="true"
        android:layout_gravity="center"
        android:textCursorDrawable="@drawable/cursor_black"
        android:hint="@string/userEmailHint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp" />

    <EditText
        android:id="@+id/userPasswordReg"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@drawable/fr_glass"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:textColorHint="#666666"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_black"
        android:hint="@string/userPasswordHint"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/registerButtonText"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:cornerRadius="12dp"
        tools:ignore="VisualLintButtonSize" />
    <TextView
        android:id="@+id/linkToAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLogin"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
</LinearLayout>