<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    android:gravity="center"
    android:padding="20dp">
        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="64sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#1F1F1F"/>
        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="Твой почерк понятен всем"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="33dp"
            android:textColor="#1F1F1F"/>
        <!-- Email -->
    <EditText
        android:id="@+id/userEmailLogin"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/fr_glass"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_black"
        android:hint="@string/userEmailHint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp" />

    <EditText
        android:id="@+id/userPasswordLogin"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@drawable/fr_glass"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_black"
        android:hint="@string/userPasswordHint"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp" />

        <!-- Забыл пароль -->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="start"/>

        <!-- Кнопка входа -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:cornerRadius="12dp" />
    <TextView
        android:id="@+id/linkToReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toRegister"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
        <!-- Разделитель -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDD"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orSlash"
                android:layout_marginHorizontal="10dp"
                android:textColor="#999"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDD"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleAuth"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:text="@string/loginGoogle"
            android:textAllCaps="false"
            android:textColor="#1F1F1F"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconTint="@null"
            app:strokeColor="#E0E0E0"
            app:strokeWidth="1dp"
            app:backgroundTint="@android:color/white"/>
         </LinearLayout>